# MITK

./: .arcconfig  .clang-format  .gitattributes  .gitignore  .vimrc  CITATION.cff  CMakeCache.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT_HEADER  CTestConfig.cmake  CTestConfigSubProject.cmake.in  Changelog.txt  DartConfig.cmake  LICENSE  LICENSE.txt  MITK-MITK-digital-copyright-04-01-2022.enc  MITK-digital-copyright-instructions.txt  MITKCPackOptions.cmake.in  MITKCTestCustom.ctest.in  MITKConfig.cmake.in  MITKCopyright.txt  MITKProject.xml  MITKSuperBuild.xml  README.md  README.txt  ReleaseNotes.txt  SuperBuild.cmake  iconLicenses.md  mitkConfig.h.in  mitkExportMacros.h.in  mitkIOExtObjectFactory.cpp  mitkTestingConfig.h.in  mitkVersion.h.in  move.py  seddi  t  zlib.h.in
Applications/: AppList.cmake  CMakeLists.txt
Applications/CoreApp/: CMakeLists.txt  CoreApp.cpp  CoreApp.ini  MitkCoreApp.cpp  MitkCoreApp.ini  startCoreApp.bat.in  startMitkCoreApp.bat.in  target_libraries.cmake
Applications/Diffusion/: CMakeLists.txt  CPackConfig.cmake  CPackConfig.cmake.in  CPackOptions.cmake  MitkDiffusion.cpp  MitkDiffusion.ini  QDiffusionImagingSplashScreen.cpp  QDiffusionImagingSplashScreen.h  splashscreen.qrc  splashscreen.xcf  startMitkDiffusion.bat.in  target_libraries.cmake
Applications/ExtApp/: CMakeLists.txt  ExtApp.cpp  ExtApp.ini  startExtApp.bat.in  startExtApp.sh.in  target_libraries.cmake
Applications/Fiberfox/: CMakeLists.txt  MitkFiberfoxGui.cpp  startMitkFiberfoxGui.bat.in  target_libraries.cmake
Applications/FlowBench/: CMakeLists.txt  MitkFlowBench.cpp  (+3 more)
BlueBerry/: BlueBerryConfig.cmake.in  BlueBerryConfig.h.in  CMakeLists.txt  COPYRIGHT_HEADER
Bundles/: CMakeLists.txt
Core/: CMakeLists.txt
CoreUI/: CMakeLists.txt
Documentation/: CMakeDoxygenFilter.cpp  CMakeLists.txt  MITKDoxygenLayout.xml  doxygen.conf.in  doxygen.css  doxygen_developers_guide.conf.in  doxygen_plugin_manual.conf.in  doxygen_users_guide.conf.in  helpPages.conf.in  mitk_doxygen.css  mitk_doxygen_extra.css  schema.css
Examples/: CMakeLists.txt  DocumentationExample.h
Modules/: CMakeLists.txt  CMakeLists.txt~  ModuleList.cmake
Q4Applications/: CMakeLists.txt
Q4mitk/: CMakeLists.txt  QmitMaterialShowcase.h  QmitkAbortEventFilter.cpp  QmitkAbortEventFilter.h  QmitkBinaryThresholdToolGUI.cpp  QmitkBinaryThresholdToolGUI.h  QmitkCalculateGrayValueStatisticsToolGUI.cpp  QmitkCalculateGrayValueStatisticsToolGUI.h  QmitkCallbackFromGUIThread.h  QmitkCopyToClipBoardDialog.cpp  QmitkCopyToClipBoardDialog.h  QmitkCustomVariants.h  QmitkDataStorageComboBox.cpp  QmitkDataStorageComboBox.h  QmitkDrawPaintbrushToolGUI.cpp  QmitkErasePaintbrushToolGUI.h  QmitkEventAdapter.cpp  QmitkEventAdapter.h  QmitkHistogramWidget.h  QmitkLevelWindowPresetDefinitionDialog.cpp  QmitkLevelWindowPresetDefinitionDialog.h  QmitkLevelWindowRangeChangeDialog.cpp  QmitkLevelWindowRangeChangeDialog.h  QmitkLevelWindowWidget.h  QmitkLevelWindowWidgetContextMenu.cpp  QmitkLineEditLevelWindowWidget.cpp  QmitkMaterialEditor.cpp  QmitkMaterialEditor.h  QmitkMaterialEditor.ui  QmitkMaterialShowcase.cpp  QmitkMaterialShowcase.h  QmitkMaterialShowcase.ui  QmitkNewSegmentationDialog.cpp  QmitkNewSegmentationDialog.h  QmitkPaintbrushToolGUI.cpp  QmitkPiecewiseFunctionCanvas.cpp  QmitkPiecewiseFunctionCanvas.h  QmitkPlotDialog.h  QmitkPlotWidget.cpp  QmitkPlotWidget.h  (+51 more)
QFunctionalities/: CMakeLists.txt
Qmitk/: CMakeLists.txt  QmitkAbortEventFilter.cpp  QmitkAbortEventFilter.h  QmitkAlgorithmFunctionalityComponent.cpp  QmitkAlgorithmFunctionalityComponent.h  QmitkBaseAlgorithmComponent.cpp  QmitkBaseAlgorithmComponent.h  QmitkBaseComponent.cpp  QmitkBaseComponent.h  QmitkBaseFunctionalityComponent.cpp  QmitkBaseFunctionalityComponent.h  QmitkBinaryThresholdToolGUI.cpp  QmitkBinaryThresholdToolGUI.h  QmitkCalculateGrayValueStatisticsToolGUI.cpp  QmitkCalculateGrayValueStatisticsToolGUI.h  QmitkCallbackFromGUIThread.cpp  QmitkCallbackFromGUIThread.h  QmitkChiliPluginDifferentStudiesDialog.cpp  QmitkChiliPluginDifferentStudiesDialog.h  QmitkChiliPluginSaveDialog.cpp  QmitkChiliPluginSaveDialog.h  QmitkColorTransferFunctionCanvas.cpp  QmitkColorTransferFunctionCanvas.h  QmitkCopyToClipBoardDialog.cpp  QmitkCopyToClipBoardDialog.h  QmitkDataTreeViewItem.cpp  QmitkDataTreeViewItem.h  QmitkDialogBar.cpp  QmitkDialogBar.h  QmitkDownloadFileFromPACSDialog.ui  QmitkDownloadFileFromPACSDialog.ui.h  QmitkDrawPaintbrushToolGUI.h  QmitkFctCompMediator.cpp  QmitkFctCompMediator.h  QmitkFunctionalityComponentContainer.cpp  QmitkFunctionalityComponentContainer.h  QmitkFunctionalityComponentContainerGUI.ui  QmitkFunctionalityComponentContainerGUI.ui.h  QmitkHelpBrowser.cpp  QmitkHelpBrowser.h  (+146 more)
Testing/: CMakeLists.txt  itkGraphCutSegmentationFilterTest.cpp  itkImageToTreeFilterTest.cpp  itkThreadPoolTest.cpp  lungs.vtk  mitkAbstractTransformGeometryTest.cpp  mitkAbstractTransformPlaneGeometryTest.cpp  mitkActionTest.cpp  mitkAutoCropImageFilterTest.cpp  mitkCameraVisualizationTest.cpp  mitkClaronInterfaceTest.cpp  mitkClaronToolTest.cpp  mitkClaronTrackingDeviceTest.cpp  mitkClosedSplineTest.cpp  mitkCompareImageSliceTestHelper.h  mitkCompressedImageContainerTest.cpp  mitkContourMapper2DTest.cpp  mitkContourTest.cpp  mitkCylindricToCartesianFilterTest.cpp  mitkDataStorageTest.cpp  mitkDataTreeFilterTest.cpp  mitkDataTreeNodeTest.cpp  mitkDataTreeTest.cpp  mitkDemonsRegistrationTest.cpp  mitkEnumerationPropertyTest.cpp  mitkEventTest.cpp  mitkExternalToolsTest.cpp  mitkExtractImageFilterTest.cpp  mitkGenericPropertyTest.cpp  mitkGeometry3DTest.cpp  mitkGeometryDataToSurfaceFilterTest.cpp  mitkGeometryTest.cpp  mitkGlobalInteractionTest.cpp  mitkHistogramMatchingTest.cpp  mitkITKThreadingTest.cpp  mitkImageDataItemTest.cpp  mitkImageMapper2DTest.cpp  mitkImageSliceSelectorTest.cpp  mitkImageTest.cpp  mitkImageTimeSelectorTest.cpp  (+61 more)
Utilities/: CMakeLists.txt  VTK_ITK.cmake
Wrapping/: CMakeLists.txt  mitkWrapMacros.cmake  mitkWrapSetup.cmake  wrap_mitkCorePython.cxx
openCherry/: CMakeLists.txt  openCherryConfig.cmake.in
(+30488 files in other folders)
